# halion-ai-orchestrator

./: .env.example  .gitignore  .tool_status.json  ARCHITECTURE.md  LICENSE.md  README.md  auth.py  dynamic_tool_registry.py  env_manager.py  executor.py  logger.py  main.py  main_context.md  permissions.py  pyproject.toml  requirements.txt  roadmap.md  run.py  streamlit_app.py  tool_manager.py
app/: __init__.py  main.py
app/components/: __init__.py  tool_card.py
app/config/: .tool_status.json  toolchains.json
app/controllers/: __init__.py  tool_controller.py  toolchain_controller.py  toolchain_executor.py  tools_controller.py
app/core/: __init__.py  dynamic_tool_registry.py  env_manager.py  executor.py  logger.py  tool_definition_registry.py  tool_manager.py  toolchain_loader.py  toolchain_registry.py
app/debug_logs/: test_write.py  test_write_result.txt
app/models/: __init__.py  toolchain_model.py
app/services/: chat_service.py  tool_service.py  toolchain_service.py
app/tools/: buscar_en_internet.py  (+7 more)
debug_logs/: test_write.py
docs/: REFACTORIZATION.md  development.md
static/: main.css
templates/: admin.html  chat.html  edit_tool.html
test/: controlador_herramientas.py  crear_herramienta.py  streamlit_diagnostic.py
tools/: buscar_en_internet.py  fetch_instant_answer.py  fetch_latest_news.py  fetch_movie_info.py  fetch_relevant_news.py  get_current_weather.py  get_latest_news.py  get_movie_info.py  get_weather.py  internet_search_tool.py  recommend_movie_by_genre.py  saludar.py  search_in_duckduckgo.py  send_email.py  test_diagnóstico.py
(+12 files in other folders)
